styles.css
/* ~~~~~ GLOBAL RULES ~~~~~ */
*,
*:before,
*:after {
  box-sizing: border-box;
  font-family: "EB Garamond", serif;
  margin: auto;
  text-align: center;
}

body {
  background: ghostwhite;
}

button,
input {
  font-size: 20px;
  padding: 10px 20px;
}

button {
  background: black;
  border: none;
  border-radius: 10px;
  color: white;
}

button:hover {
  background: darkslateblue;
}

.hidden {
  display: none!important;
}

/* ~~~~~ MAIN POSTER SECTION ~~~~~ */
.main-poster {
  height: 100vh;
}

.poster {
  background: black;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 20px auto;
  padding: 50px 20px;
  width: 70%;
}

.poster-img {
  background-size: cover;
  border: 2px solid white;
  max-width: 80%;
}

.poster-title,
.poster-quote {
  color: white;
  line-height: 1;
  width: 90%;
}

.poster-title {
  font-size: 60px;
  font-weight: normal;
  letter-spacing: 20px;
  margin-bottom: 10px;
  text-transform: uppercase;
}

.main-poster button {
  margin: 10px;
}

/* ~~~~~ POSTER FORM SECTION ~~~~~ */
.poster-form {
  display: flex;
  flex-direction: column;
  height: 100vh;
}

.poster-form h2 {
  margin-bottom: 30px;
}

h2 {
  margin-bottom: 20px;
}

.poster-form form {
  align-content: center;
  display: flex;
  flex-direction: column;
  width: 40%;
}

.poster-form input {
  display: block;
  margin-bottom: 20px;
  width: 100%;
}

.poster-form .divider {
  border-bottom: 1px solid black;
  margin: auto;
  margin-bottom: 20px;
  width: 400px;
}

/* ~~~~~ SAVED POSTER SECTION ~~~~~ */
.saved-posters {
  padding: 40px;
}

.saved-posters-grid {
  display: flex;
  flex-wrap: wrap; 
  justify-content: center; 
  gap: 8px; 
}

.back-to-main, .back-to-main-from-unmotivational {
  margin-top: 20px;
}

.mini-poster {
  background: black;
  color: white;
  height: 340px;
  padding: 25px;
  width: 425px;
}

.mini-poster-unmotivational {
  background: rgb(84, 83, 83);
  border-radius: 10px;
  color: white;
  height: 340px;
  padding: 25px;
  width: 425px;
}

.mini-poster img {
  height:200px;
  width: 300px;
}

.mini-poster h2,
.mini-poster h4,
.delete {
  color: white;
  line-height: 1;
  width: 90%;
}

.mini-poster h2 {
  font-size: 30px;
  font-weight: normal;
  letter-spacing: 5px;
  margin-bottom: 10px;
  text-transform: uppercase;
}

